@@ -1,6 +1,6 @@
 Package: optimx
-Version: 2012-5.6
-Date: 2012-05-06
+Version: 2012-5.20
+Date: 2012-05-20
 Title: A replacement and extension of the optim() function
 Author: John C Nash <nashjc@uottawa.ca> and Ravi Varadhan <RVaradhan@jhmi.edu>
 Maintainer: John C Nash <nashjc@uottawa.ca>
